// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentSettings should change filter 1`] = `
<div>
  <div
    style="width: 100%; background-color: rgb(245, 245, 245); padding: 2.5rem;"
  >
    <div
      class="MuiBox-root MuiBox-root-147"
      style="height: 50px; margin-bottom: 13px; width: 100%;"
    >
      <div
        class="MuiBox-root MuiBox-root-148"
        style="display: flex; align-items: center; justify-content: space-between;"
      >
        <div>
          <div
            class="MuiBox-root MuiBox-root-149"
            style="display: flex; align-items: center; margin-top: 5px;"
          >
            <h2
              class="MuiTypography-root MuiTypography-h1"
              style="color: rgb(68, 68, 68); font-size: 2.25rem; font-weight: 600; letter-spacing: 0; margin-right: 0.5rem;"
            >
              Payment Settings
            </h2>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-tableWrapper-108"
    >
      <div
        class="makeStyles-filterContainer-116 makeStyles-filterContainerTopPadding-125"
      >
        <div
          class="makeStyles-statusFilter-117"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-activeFilter-118"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Credit Card
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-154 makeStyles-box-151"
    >
      <div
        class="makeStyles-formContainer-153 makeStyles-creditCardContainer-150"
      >
        <div
          class="makeStyles-formContainerWrapper-152"
        >
          <div
            class="MuiGrid-root makeStyles-adminCards-158 MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-12 MuiGrid-grid-xl-12"
            >
              <div
                class="makeStyles-emptyCardItem-191 false"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-addNewCardButton-213 MuiButton-textPrimary"
                  data-testid="add-card-btn"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg>
                      credit-card.svg
                    </svg>
                    ADD NEW CREDIT CARD
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentSettings should render 1`] = `
<div>
  <div
    style="width: 100%; background-color: rgb(245, 245, 245); padding: 2.5rem;"
  >
    <div
      class="MuiBox-root MuiBox-root-40"
      style="height: 50px; margin-bottom: 13px; width: 100%;"
    >
      <div
        class="MuiBox-root MuiBox-root-41"
        style="display: flex; align-items: center; justify-content: space-between;"
      >
        <div>
          <div
            class="MuiBox-root MuiBox-root-42"
            style="display: flex; align-items: center; margin-top: 5px;"
          >
            <h2
              class="MuiTypography-root MuiTypography-h1"
              style="color: rgb(68, 68, 68); font-size: 2.25rem; font-weight: 600; letter-spacing: 0; margin-right: 0.5rem;"
            >
              Payment Settings
            </h2>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-tableWrapper-1"
    >
      <div
        class="makeStyles-filterContainer-9 makeStyles-filterContainerTopPadding-18"
      >
        <div
          class="makeStyles-statusFilter-10"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-activeFilter-11"
            data-testid="filter-status-opt"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Credit Card
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-47 makeStyles-box-44"
    >
      <div
        class="makeStyles-formContainer-46 makeStyles-creditCardContainer-43"
      >
        <div
          class="makeStyles-formContainerWrapper-45"
        >
          <div
            class="MuiGrid-root makeStyles-adminCards-51 MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-12 MuiGrid-grid-xl-12"
            >
              <div
                class="makeStyles-emptyCardItem-84 false"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-addNewCardButton-106 MuiButton-textPrimary"
                  data-testid="add-card-btn"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg>
                      credit-card.svg
                    </svg>
                    ADD NEW CREDIT CARD
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
